# BGApp

./: CMakeLists.txt  README.md
src/: AppTime.cpp  AppTime.h  Application.cpp  Application.h  Input.cpp  Input.h  Performance.cpp  Performance.h  RuntimeLayer.cpp  RuntimeLayer.h  Time.cpp  Time.h  Window.cpp  Window.h
